  * PSX STR file demuxer
  * Westwood Studios AUD demuxer
  * PVA file demuxer
  * VOX file demuxer
  * Goom plugin updated and acceleration added (mmx/ppc)
  * live rawdv playback (from device)
  * plugin loader improvements
  * basic oscilloscope post plugin
  * CD digital audio input source and stream demuxer
  * Dialogic ADPCM audio decoder
  * reporting of unhandled codecs
  
xine-lib (1-beta2)
  * what a GOOM! post plugin
  * Digital TV (DVB) input plugin (experimental)
  * Interplay MVE playback system (file demuxer, video decoder, audio decoder)
  * support for real video 4.0 (through external real binary plugins)
  * quicktime binary-only codec support bugfixes
	
xine-lib (1-beta1)
  * updated libfaad
  * improved engine for seeking and slider positioning
  * network input plugin is working again
  * handle avi files produced by dvgrab
  * real media demuxer should handle most files now 
  * real media rv20/rv30 video and cook/sipro/dnet audio should work 
    (except dnet x86 only)
  * real media rtsp protocol streaming support
  * mms input plugin cleanup/bugfixes/improvements
  * syncfb and sdl vo plugins ported
  * quicktime binary-only codec support (highly experimental)
  * dmo wmv9 binary codec support
  * MNG demuxer added
  * raw dv demuxer added
  * many FLI/FLC fixes
  
xine-lib (1-beta0)
  * fix decoder priority configuration
  * cache available plugins for faster xine loading
  * metronom's improvements for streams with slightly wrong sample rates
  * fix case were XV driver would segfault (YUY2)
  * first xine post effect plugin
  * new version of internal libdvdread fixing some DVD problems
  * longstanding dxr3 bug fixed: for some still menus the highlight did not move
  * asf demuxer fixes
  * fb video output plugin ported to new architecture
  * MPEG-4 file (*.mp4) support
  * closed caption support ported to new architecture
  
xine-lib (1-alpha2)
  * configurable image position
  * DVD menu button highlight position fixes