@@ -91,6 +91,9 @@ xine is using
   based on work from
     MPlayer http://www.mplayerhq.hu/
 
+  Nosefart v1.92 - NES Music Simulator
+    Written by Matt Conte
+    http://www.baisoku.org/
 
 Contributions
 =============
