@@ -23,3 +23,4 @@ libmad
 libmpeg2
 libmpg123
 vidix
+nosefart                        1.92                    Mike Melanson
