@@ -9,14 +9,17 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool-nofpic
 libdir = $(XINE_PLUGINDIR)
 XINE_LIB = $(top_builddir)/src/xine-engine/libxine.la
 
-SUBDIRS = gsm610
+AM_CFLAGS = -DNSF_PLAYER
+
+SUBDIRS = gsm610 nosefart
 
 lib_LTLIBRARIES = \
 	xineplug_decode_adpcm.la \
 	xineplug_decode_logpcm.la \
 	xineplug_decode_roqaudio.la \
 	xineplug_decode_gsm610.la \
-	xineplug_decode_interplayaudio.la 
+	xineplug_decode_interplayaudio.la \
+	xineplug_decode_nsf.la 
 
 xineplug_decode_roqaudio_la_SOURCES = roqaudio.c
 xineplug_decode_roqaudio_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
@@ -38,6 +41,13 @@ xineplug_decode_gsm610_la_LIBADD = \
 xineplug_decode_interplayaudio_la_SOURCES = interplayaudio.c
 xineplug_decode_interplayaudio_la_LIBADD = $(top_builddir)/src/xine-engine/libxine.la
 xineplug_decode_interplayaudio_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+
+xineplug_decode_nsf_la_SOURCES = nsf.c
+#xineplug_decode_nsf_la_CFLAGS = -DNSF_PLAYER
+xineplug_decode_nsf_la_LDFLAGS = -avoid-version -module @XINE_PLUGIN_MIN_SYMS@
+xineplug_decode_nsf_la_LIBADD = \
+	$(XINE_LIB) \
+	$(top_builddir)/src/libxineadec/nosefart/libnosefart.la
 
 # noinst_HEADERS = 
 
